Fix (Front & Back): sidenav overflow

--- a/client/src/app/components/admin/contributor-services/contributor-services.component.css
+++ b/client/src/app/components/admin/contributor-services/contributor-services.component.css
@@ -5,3 +5,10 @@
 form {
     margin: 30px;
 }
+
+.content-title {
+    margin: -30px -30px 20px -30px;
+    padding-left: 15px;
+    text-align: left;
+    text-transform: initial;
+}
