--- a/client/src/app/components/carousel/carousel.component.css
+++ b/client/src/app/components/carousel/carousel.component.css
@@ -10,6 +10,7 @@ ul {
 }
 
 .carousel-inner {
+    height: 100%;
     display: flex;
 }
 
