--- a/client/src/app/components/event-edition/event-edition.component.css
+++ b/client/src/app/components/event-edition/event-edition.component.css
@@ -1,4 +1,4 @@
-:host {
+:host, .event-edition {
     height: 100%;
 }
 
